--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,17 @@ plantilla.derechos=TechShop Derechos Reservados 2023
 
 index.nuestrosArticulos=Nuestros Art\u00edculos
 
+carrito.verCarrito=Ver Carrito
+carrito.titulo=Productos en el Carrito
+carrito.cantidad=Cantidad
+carrito.total=Total
+carrito.totalCompra=Total de Compra
+carrito.seguirComprando=Seguir Comprando
+carrito.facturar=Facturar
+carrito.no_mostrar=Carrito V\u00e1cio!
+carrito.cantidad=Cantidad
+carrito.datos=Datos del Art\u00edculo
+
 accion.agregar=Agregar
 accion.regresar=Regresar
 accion.eliminar=Eliminar
